# osrs_info

./: LICENSE  README.md  pyproject.toml
examples/: hiscores_example.py  item_price_example.py
osrs_info/: __init__.py  client.py  constants.py  decoder.py  exceptions.py  hiscores.py  hiscores_api.py  items.py
tests/: test_api.py  test_bosses.py  test_hiscores.py  test_items.py
